fixed align codes

--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body{
-    width: 740px;
-    height: 300px;
-    font-family:  'Microsoft Yahei';
-    color: #333;
-    background: #fefefe;
-    margin: 15px;
+  width: 740px;
+  font-family:  'Microsoft Yahei';
+  color: #333;
+  background: #fefefe;
+  margin: 15px;
 }
 
 form input {
